Added invitation identifiers to the new invitation